# LuaAV

./: .gitignore  .gitmodules  COPYRIGHT  README.md  build.sh  index.html  params.json  start.lua
LuaAV/LuaAVApp/linux/: al_mainloop_qt.cpp  al_mainloop_qt.h  luaav_app_codepad_highlighter_qt.cpp  luaav_app_codepad_highlighter_qt.h  luaav_app_codepad_qt.cpp  luaav_app_codepad_qt.h  luaav_app_codepad_window_qt.cpp  luaav_app_codepad_window_qt.h  luaav_app_log_linux.cpp  luaav_app_log_linux.h  luaav_app_menu_qt.cpp  luaav_app_menu_qt.h  luaav_app_qt.cpp  luaav_app_screens_x11.cpp  luaav_app_screens_x11.h  luaav_app_window_opengl_qt.cpp  luaav_app_window_opengl_qt.h  luaav_app_window_qt.cpp  luaav_app_window_x11.cpp  luaav_console_qt.cpp  luaav_console_qt.h  luaav_filewatcher_linux.cpp  luaav_linux.h  luaav_main_qt.cpp
LuaAV/LuaAVApp/osx/: BlueView.h  BlueView.m  LuaAVConsole.h  LuaAVConsole.mm  LuaAVLog.h  LuaAVLog.mm  LuaAVResponder.h  LuaAVResponder.mm  ModulesTableView.h  ModulesTableView.m  al_mainloop_osx.mm  luaav_app_codepad_cocoa.mm  luaav_app_menu_cocoa.mm  luaav_app_osx.mm  luaav_app_screens_osx.h  luaav_app_screens_osx.mm  luaav_filewatcher_cocoa.mm  luaav_window_cocoa.mm
LuaAV/LuaAVApp/scripts/: LuaAV.lua  preferences.lua
LuaAV/LuaAVApp/src/: al_mainloop.cpp  luaav_app.cpp  luaav_app.h  luaav_app_audiodriver.cpp  luaav_app_audiodriver.h  luaav_app_codepad.cpp  luaav_app_codepad.h  luaav_app_doc.h  luaav_app_menu.cpp  luaav_app_menu.h  luaav_app_screens.h  luaav_app_stateview.cpp  luaav_app_stateview.h  luaav_app_window.cpp  luaav_app_window.h  luaav_filewatcher.cpp  luaav_filewatcher.h
LuaAV/buildtool/: build.linux.lua  build.osx.lua  upload.osx.lua
LuaAV/buildtool/modules/: autoconf.lua  buildutils.lua  config.lua  dependency.lua  path.lua  platform.lua  project.lua  src.lua
LuaAV/buildtool/scripts/: README  install_dependencies.sh
LuaAV/buildtool/src/: Makefile  luaFileSystem.c
LuaAV/buildtool/utilities/: document.luaav.lua  document.luaav3.lua  html.highlighter.lua  update.website.docs.lua
LuaAV/cmd/: al_mainloop.cpp  al_mainloop.h  al_mainloop_osx.mm  al_time.cpp  al_time.h  main.cpp
LuaAV/cmd/scripts/: test.lua  test2.lua
LuaAV/dev/include/: lua_array.h  lua_compiler.hpp  lua_glue.h  lua_utility.h  luaav.h  luaav_audio.hpp  luaav_audio_delay.hpp  luaav_audio_denormal.hpp  luaav_audio_filter.hpp  luaav_audio_jit.hpp  luaav_audio_lua.hpp  luaav_audio_noise.hpp  luaav_audio_oscillator.hpp  luaav_audio_reverb.hpp  luaav_audio_scl.hpp  luaav_audio_spatial.hpp  luaav_state.hpp  luaav_udata.hpp  luaav_utility.hpp
LuaAV/dev_osx/: libraries.txt
LuaAV/dev_osx/include/: FreeImage.h  lauxlib.h  lua.h  portaudio.h
LuaAV/extra/doc/: Array.html  Image.html  Label.html  LuaAV.html  app.html  audio.html  box2d.html  font.html  gui.html  home.html  index.html  midi.html  opencl.html  opengl.html  (+4 more)
LuaAV/licenses/: AlloCore-license.txt  LuaSocket-COPYRIGHT.txt  PortAudio-COPYRIGHT.txt  RtMIDI-license.txt  jack-ringbuffer-license.txt  lpeg-copyright.txt  lpeglist-copyright.txt  luadoc-license.txt  luafilesystem-license.txt  luasql-LICENSE.txt  of-LICENSE.txt  oscpack-LICENSE.txt  vamp-LICENSE.txt
LuaAV/modules/opencv/src/cv/: CMakeLists.txt  _cv.h  _cvfeaturetree.h  _cvgeom.h  _cvimgproc.h  _cvipp.h  _cvkdtree.hpp  _cvmodelest.h  cvaccum.cpp  cvapprox.cpp  cvcalibinit.cpp  cvcalibration.cpp  cvcamshift.cpp  cvcanny.cpp  cvcascadedetect.cpp  cvcheckchessboard.cpp  cvcolor.cpp  cvcontours.cpp  cvcontourtree.cpp  cvconvhull.cpp  cvcorner.cpp  cvcornersubpix.cpp  cvderiv.cpp  cvdistransform.cpp  cvemd.cpp  cvfeatureselect.cpp  cvfeaturetree.cpp  cvfilter.cpp  cvfloodfill.cpp  cvfundam.cpp  cvgeometry.cpp  cvgrabcut.cpp  cvhaar.cpp  cvhistogram.cpp  cvhough.cpp  cvimgwarp.cpp  cvinpaint.cpp  cvkalman.cpp  cvkdtree.cpp  cvlinefit.cpp  (+34 more)
LuaAV/modules/opencv/src/cvaux/: CMakeLists.txt  _cvaux.h  _cvmatrix.h  cvadaptiveskindetector.cpp  cvba.cpp  cvbgfg_acmmm2003.cpp  cvbgfg_codebook.cpp  cvbgfg_gaussmix.cpp  cvcalcimagehomography.cpp  cvcalibfilter.cpp  cvcalonder.cpp  cvcondens.cpp  cvcorrespond.cpp  cvdominants.cpp  cvepilines.cpp  cvfast.cpp  cvfindhandregion.cpp  cvfuzzymeanshifttracker.cpp  cvhmm.cpp  cvhog.cpp  cvimage.cpp  cvlee.cpp  cvlines.cpp  cvmorphing.cpp  cvoctree.cpp  cvoneway.cpp  cvpgh.cpp  cvplanardetect.cpp  cvprewarp.cpp  cvquadsubpix.cpp  cvscanlines.cpp  cvselfsimilarity.cpp  cvspinimages.cpp  cvsubdiv2.cpp  cvtrifocal.cpp
LuaAV/modules/opencv/src/cvaux/vs/: bgfg_estimation.cpp  blobtrackanalysis.cpp  blobtrackanalysishist.cpp  blobtrackanalysisior.cpp  blobtrackanalysistrackdist.cpp  blobtrackgen1.cpp  blobtrackgenyml.cpp  blobtrackingauto.cpp  blobtrackingcc.cpp  blobtrackingccwithcr.cpp  blobtrackingkalman.cpp  blobtrackinglist.cpp  blobtrackingmsfg.cpp  blobtrackingmsfgs.cpp  blobtrackpostprockalman.cpp  blobtrackpostproclinear.cpp  blobtrackpostproclist.cpp  enteringblobdetection.cpp  enteringblobdetectionreal.cpp  testseq.cpp
LuaAV/modules/opencv/src/cxcore/: CMakeLists.txt  _cxcore.h  cxalloc.cpp  cxarithm.cpp  cxarray.cpp  cxconvert.cpp  cxcopy.cpp  cxdatastructs.cpp  cxdrawing.cpp  cxdxt.cpp  cxflann.cpp  cxlapack.cpp  cxmathfuncs.cpp  cxmatmul.cpp  cxmatrix.cpp  cxpersistence.cpp  cxprecomp.cpp  cxrand.cpp  cxstat.cpp  cxsystem.cpp  cxtables.cpp
LuaAV/modules/opencv/src/ml/: CMakeLists.txt  _ml.h  ml_inner_functions.cpp  mlann_mlp.cpp  mlboost.cpp  mldata.cpp  mlem.cpp  mlertrees.cpp  mlknearest.cpp  mlnbayes.cpp  mlrtrees.cpp  mlsvm.cpp  mltree.cpp
LuaAV/test/: cosm.starter.lua  opengl.test.ctx.lua  test.clang.header.lua  test.clang.lua  test.clang2.lua  test.code.c  test.code.cpp  test.console.print.lua  test.cpp.lua  test.filepaths.lua  test.fluid.lua  test.win.global.lua  test.window.start.screen.lua
lib/OSX/: glfw.dylib  glfw3.dylib
modules/: gl.lua  glfw.lua  glfw3.lua  sdl.lua  window.lua
projects/osx.xcodeproj/: grahamwakefield.pbxuser  grahamwakefield.perspectivev3  project.pbxproj
scratchpad/: av.lua  example_glfw.lua  example_glfw3.lua  example_sdl.lua
src/: av  av.cpp  av.h  av_ffi_header.cpp  h2ffi.lua
(+1471 files in other folders)
